--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="exp2.css">
+  <link rel="stylesheet" href="styles.css">
   <title>EXPT 2: My Profile</title>
 </head>
 <body>
